Fixed the alignment of photos in the middle section (Flow Yoga)

--- a/style.css
+++ b/style.css
@@ -113,18 +113,19 @@ h1 {
 }
 
 .flow {
-    margin-right: -80px;
+   ;
     text-align: center;
     font-family: helvetica, "open sans", sans-serif;
     font-weight: bold;
     color: rgb(34, 111, 131);
     margin-top: 85px;
+    margin-left: 84px
 }
 
 .photos {
     display: flex;
     flex-wrap: wrap;
-    margin-right: -80px;
+  ;
     gap: 33px;
     justify-content: center;
     font-family: roboto, varta, sans-serif;
@@ -132,6 +133,7 @@ h1 {
     font-weight: 600;
     text-align: center;
 margin-bottom: 55px;
+margin-left: 84px;
 
 }
 
